# portfolio-assistant-langgraph

./: .env.example  .gitignore  .vercelignore  AGENTS.md  ARCHITECTURE_OLD_SYSTEM.md  FRONTEND_MIGRATION_PLAN.md  LANGGRAPH_ARCHITECTURE.md  README.md  langgraph_portfolio_prd_v2.md  langgraph_portfolio_prioritized_plan.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: __init__.py  cli.py  config.py  errors.py  logging_config.py  main.py  schemas.py
app/api/: __init__.py  auth.py  prompt.py
app/graph/: __init__.py  builder.py  constants.py  nodes.py  observability.py  routing.py  state.py
app/prompts/: __init__.py  answer_generation.md  context_resolution.md  relevance_classification.md  retrieval_planning.md  suggestion_generation.md
app/services/: __init__.py  assistant.py  auth.py  auth_cookies.py  auth_tokens.py  featured_projects.py  openai_client.py  prompt_runner.py  prompt_templates.py  rate_limit.py  resume_rag.py  resume_vector_store.py  retrieval.py  session_store.py  turnstile.py
portfolio/: featured_projects.json
scripts/: __init__.py  convert_resume_pdf.py  index_resume.py
skills/debug/: SKILL.md
skills/feature/: SKILL.md
skills/optimize/: SKILL.md
skills/refactor/: SKILL.md
tests/: test_api_prompt.py  test_auth.py  test_cli.py  test_graph_phase_1.py  test_logging_config.py  test_openai_client.py  test_resume_rag.py  test_retrieval.py
