[project]
name = "portfolio-assistant-langgraph"
version = "0.1.0"
description = "A LangGraph-powered generic portfolio assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.0.1,<2.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
portfolio-assistant = "app.cli:main"
portfolio-index-resume = "scripts.index_resume:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
